--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "version": "1.0.0",
   "main": "Index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon /index.js localhost 3000"
   },
   "repository": {
     "type": "git",
